--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
-<header>
-<body>
-Hello World1
-</body>
-</header>
+    <header>
+        <title> Home </title>
+    </header>
+    <body>
+        <a href="/about.html">About</a>
+        <a href="/heading.html">Headings</a>
 
+    </body>
 </html>
