--- a/heading.html
+++ b/heading.html
@@ -10,7 +10,9 @@
         <h4>It also provides padding - H4</h4>
         <h5>Heading 5</h5>
         <h6>Heading 6</h6>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Dolorem laboriosam asperiores nihil iste nemo reiciendis</strong>s, architecto impedit vero perspiciatis tempore recusandae a error doloremque? Eligendi nihil ducimus culpa facere officia?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem laboriosam asperiores nihil iste nemo reiciendis, architecto impedit vero perspiciatis tempore recusandae a error doloremque? Eligendi nihil ducimus culpa facere officia?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem laboriosam asperiores nihil iste nemo reiciendis, architecto impedit vero perspiciatis tempore recusandae a error doloremque? Eligendi nihil ducimus culpa facere officia?</p>
+        <br>
+        <img="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png">
     </body>
 </html>
