--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <title> Home </title>
     </header>
     <body>
-        <a href="/about.html">About</a>
-        <a href="/heading.html">Headings</a>
-
+        <h3>This is my Webdev learning site.</h3>
+        <ul>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/htmltest.html">Headings</a></li>
+        </ul>
     </body>
 </html>
