--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <html>
     <header>
        <title>About</title>
+       <a href="/index.html">Home</a>
     </header>
     <body>
         This site is used as a reference and learning ground for my webdev journey.
