--- a/htmltest.html
+++ b/htmltest.html
@@ -100,6 +100,18 @@
             <hr>
         <!--Button-->
         <button>Click me</button>
+        <br>
+        <!--Quote-->
+
+        <blockquote cite="website.com">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto ex doloribus consectetur eligendi fugit, optio quis. Labore debitis facilis suscipit perspiciatis doloremque delectus. Veritatis tempore voluptas eius tenetur ullam laudantium!
+        </blockquote>
+
+        <br>
+
+        <p> The <abbr title="World wide Web">WWW</abbr> is neat</p>
+
+        <p><cite>This is my test site</cite> </p>
         <div style="margin-top:100px;"
     </body>
 </html>
