--- a/symantics.html
+++ b/symantics.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-    <header>
+    <body>
+        <header>
        <title>Symantic Tag</title>
        <a href="/index.html">Home</a>
-    </header>
-    <body>
-        
+        </header>
+    <section>
+        <article>
+            <h4>December/5th/2020 - Blog one</h4>
+            Lorem ipsum dolor sit amet.
+        </article>
+    </section>
     </body>
 </html>
