--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <li>Learn mysql</li>
                 <li>Create a basic blog with web input and formating</li>
                 <li>Create a CMS</li>
+                <li>Use form to submit to table on page</li>
+                <li>Use form to send email</li>
             </ul>
         </p>
 
