--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h3>This is my Webdev learning site.</h3>
         <ul>
             <li><a href="/about.html">About</a></li>
-            <li><a href="/htmltest.html">Headings</a></li>
+            <li><a href="/htmltest.html">Html test</a></li>
             <li><a href="/symantics.html">Symantics</a></li>
         </ul>
         <p>
