test for netlify

--- a/symantics.html
+++ b/symantics.html
@@ -5,6 +5,7 @@
         <header>
        <title>Symantic Tag</title>
        <a href="/index.html">Home</a>
+       <p>Test</p>
         </header>
     <section>
         <article>
