--- a/public/symantics.html
+++ b/public/symantics.html
@@ -10,6 +10,8 @@
         <article>
             <h4>December/5th/2020 - Blog one</h4>
             Lorem ipsum dolor sit amet.
+            <br>
+            <small>12/5/2020 Posted by Admin</small>
         </article>
     </section>
     </body>
