--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,10 @@
         <p>
             <h4>Goals</h4>
             <ul>
-                <li>Learn Html and CSS</li>
-                <li>Learn Javascript and Node.js</li>
+                <li>Learn Html✓</li>
+                <li>Learn Css</li>
+                <li>Learn Javascript</li>
+                <li>Learn Node.js</li>
                 <li>Learn mysql</li>
                 <li>Create a basic blog with web input and formating</li>
                 <li>Create a CMS</li>
