--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <body>
         <h3>This is my Webdev learning site.</h3>
         <ul>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/htmltest.html">Html test</a></li>
-            <li><a href="/symantics.html">Symantics</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="htmltest.html">Html test</a></li>
+            <li><a href="symantics.html">Symantics</a></li>
         </ul>
         <p>
             <h4>Goals</h4>
