--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="htmltest.html">Html test</a></li>
             <li><a href="symantics.html">Symantics</a></li>
+            <li><a href="csstest.html">Css Testing</a></li>
         </ul>
         <p>
             <h4>Goals</h4>
