--- a/public/csstest.html
+++ b/public/csstest.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css Test</title>
+    <style>
+        #te{
+            color:blue;
+        }
+
+    </style>
 </head>
 <body>
-    test
+    <h2 id="te">test</h1>
 </body>
 </html>
