--- a/public/about.html
+++ b/public/about.html
@@ -6,6 +6,6 @@
        <a href="/index.html">Home</a>
     </header>
     <body>
-        This site is used as a reference and learning ground for my webdev journey.
+        My name is Alexander Kersey, I am currently practicing Web Development. I will be using this website to practice and hone the skills I learn. Feel free to contact me at awkersey123@gmail.com
     </body>
 </html>
