--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
 <html>
     <header>
        <title>About</title>
-       <a href="/index.html">Home</a>
+       <a href="index.html">Home</a>
     </header>
     <body>
         My name is Alexander Kersey, I am currently practicing Web Development. I will be using this website to practice and hone the skills I learn. Feel free to contact me at awkersey123@gmail.com
