--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
         <title> Home </title>
     </header>
     <body>
-        <h3>This is my Webdev learning site.</h3>
+        <h3>This is my WebdDev learning site.</h3>
         <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="htmltest.html">Html test</a></li>
             <li><a href="symantics.html">Symantics</a></li>
-            <li><a href="csstest.html">Css Testing</a></li>
+            <li><a href="csstest.html">CSS Testing</a></li>
         </ul>
         <p>
             <h4>Goals</h4>
