--- a/public/post.html
+++ b/public/post.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Post</title>
+    <a href="index.html">Home</a>
 </head>
 <body>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo distinctio illo inventore dolor iure? Placeat nisi quisquam, est distinctio aliquam cupiditate et ea recusandae, voluptatem quae quidem corporis blanditiis pariatur?</p>
