--- a/public/symantics.html
+++ b/public/symantics.html
@@ -35,7 +35,7 @@
         <ul>
             <li><a href="#">News</a></li>
             <li><a href="#">Pets</a></li>
-            <li><a href="#">Other</a>></a></li>
+            <li><a href="#">Other</a></li>
         </ul>
         </nav>
     </aside>
