--- a/csstest.html
+++ b/csstest.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css Test</title>
-    <style>
-        #te{
-            color:blue;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
     <a href="index.html">Home</a>
 </head>
 <body>
