--- a/csstest.html
+++ b/csstest.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css Test</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <a href="index.html">Home</a>
 </head>
 <body>
     <h2 id="te">test</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident delectus vel unde quae soluta ratione ipsa cupiditate odit, non asperiores veritatis minus nam culpa, assumenda id. Ipsum eius aperiam ea? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur itaque natus aperiam pariatur, officia architecto sapiente, ad ut voluptatibus magnam doloribus reiciendis ab rem maxime libero? Doloribus, fugit impedit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae officia totam provident quos deserunt quam expedita voluptas nihil quod rem voluptate maxime exercitationem harum sit perferendis reprehenderit voluptatibus, vero cumque.</p>
 </body>
 </html>
