--- a/about.html
+++ b/about.html
@@ -3,9 +3,27 @@
 <html>
     <header>
        <title>About</title>
-       <a href="index.html">Home</a>
+       <link rel="stylesheet" href="css/style.css">
+
     </header>
     <body>
-        My name is Alexander Kersey, I am currently practicing Web Development. I will be using this website to practice and hone the skills I learn. Feel free to contact me at awkersey123@gmail.com
+        <div class="container">
+            <div class="menu">
+              <h2>Menu</h2>
+               <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="htmltest.html">Html test</a></li>
+                <li><a href="symantics.html">Symantics</a></li>
+                <li><a href="csstest.html">CSS Testing</a></li>
+              </ul>
+             </div>
+             My name is Alexander Kersey, I am currently practicing Web Development. I will be using this website to practice and hone the skills I learn. Feel free to contact me at awkersey123@gmail.com
+        </div>
+        <footer id="main-footer">
+            <p>
+                Copyright &copy; 2020
+            </p>
+        </footer>
     </body>
 </html>
