--- a/htmltest.html
+++ b/htmltest.html
@@ -1,117 +1,133 @@
 <html>
     <header>
         <title> Html Test </title>
-        <a href="/index.html">Home</a>
+        <link rel="stylesheet" href="css/style.css">
     </header>
     <body>
-        <!-- Hello -->
-        <h1>Hello World - H1</h1>
-        <h2>Heading 2</h2>
-        <h3>This goes all the way to H6 -H3</h3>
-        <h4>It also provides padding - H4</h4>
-        <h5>Heading 5</h5>
-        <h6>Heading 6</h6>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Dolorem laboriosam asperiores nihil iste nemo reiciendis</strong>s, architecto impedit vero perspiciatis tempore recusandae<em> a error doloremque? </em>Eligendi nihil ducimus culpa facere officia?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem laboriosam asperiores nihil iste nemo reiciendis, architecto impedit vero perspiciatis tempore recusandae a error doloremque? Eligendi nihil ducimus culpa facere officia?</p>
-        <br>
-        <hr>
-        <br>
-        <!--List-->
-        <ol>
-            <li>These are numbered</li>
-            <li>Ol list is numbered, ul list is dotted</li>
-        </ol>
-        <ul>
-            <li>Dotted</li>
-        </ul>
-<br>
-<hr>
-<br>
-        <!--Tables-->
-        <table>
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Age</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Alex</td>
-                    <td>test@test.com</td>
-                    <td>43</td>
-                </tr>
-                <tr>
-                    <td>Jon Doe</td>
-                    <td>jon@test.com</td>
-                    <td>32</td>
-                </tr>
-            </tbody>
-        </table>
-        <!--Form-->
-        <br>
-        <hr>
-        <br>
-        <form action="process.js" method="POST">
-            <div>
-                <label>First Name</label>
-                <input type="text" name="FirstName" placeholder="First Name"> 
+        <div class="container">
+            <div class="menu">
+                <h2>Menu</h2>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="htmltest.html">Html test</a></li>
+                    <li><a href="symantics.html">Symantics</a></li>
+                    <li><a href="csstest.html">CSS Testing</a></li>
+                </ul>
             </div>
-            <br>
-            <div>
-                <label>Last Name</label>
-                <input type="text" name="LastName" placeholder="Last Name"> 
-            </div>
-            <br>
-            <div>
-                <label>Email</label>
-                <input type="email" name="email" placeholder="Email">
-            </div>
-            <br>
-            <div>
-                <label>Message</label>
-                <textarea name="message">
-                </textarea>
-            </div>
-            <br>
-            <div>
-                <label>Gender</label>
-                    <select name="gender">
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                        <option value="other">Other</option>
-                    </select>
-            </div>
-            <br>
-            <div>
-                <label>Age</label>
-                <input type="number" name="age" value="0">
-            </div>
-            <br>
-            <div>
-                <label>Birthday</label>
-                <input type="date" name="birthday">
-            </div>
-            <br>
-            <input type="submit" name="submit" value="Submit">
-        </form>
+            <!-- Hello -->
+            <h1>Hello World - H1</h1>
+            <h2>Heading 2</h2>
+            <h3>This goes all the way to H6 -H3</h3>
+            <h4>It also provides padding - H4</h4>
+            <h5>Heading 5</h5>
+            <h6>Heading 6</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Dolorem laboriosam asperiores nihil iste nemo reiciendis</strong>s, architecto impedit vero perspiciatis tempore recusandae<em> a error doloremque? </em>Eligendi nihil ducimus culpa facere officia?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem laboriosam asperiores nihil iste nemo reiciendis, architecto impedit vero perspiciatis tempore recusandae a error doloremque? Eligendi nihil ducimus culpa facere officia?</p>
             <br>
             <hr>
-        <!--Button-->
-        <button>Click me</button>
-        <br>
-        <!--Quote-->
+            <br>
+            <!--List-->
+            <ol>
+                <li>These are numbered</li>
+                <li>Ol list is numbered, ul list is dotted</li>
+            </ol>
+            <ul>
+                <li>Dotted</li>
+            </ul>
+    <br>
+    <hr>
+    <br>
+            <!--Tables-->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Age</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Alex</td>
+                        <td>test@test.com</td>
+                        <td>43</td>
+                    </tr>
+                    <tr>
+                        <td>Jon Doe</td>
+                        <td>jon@test.com</td>
+                        <td>32</td>
+                    </tr>
+                </tbody>
+            </table>
+            <!--Form-->
+            <br>
+            <hr>
+            <br>
+            <form action="process.js" method="POST">
+                <div>
+                    <label>First Name</label>
+                    <input type="text" name="FirstName" placeholder="First Name"> 
+                </div>
+                <br>
+                <div>
+                    <label>Last Name</label>
+                    <input type="text" name="LastName" placeholder="Last Name"> 
+                </div>
+                <br>
+                <div>
+                    <label>Email</label>
+                    <input type="email" name="email" placeholder="Email">
+                </div>
+                <br>
+                <div>
+                    <label>Message</label>
+                    <textarea name="message">
+                    </textarea>
+                </div>
+                <br>
+                <div>
+                    <label>Gender</label>
+                        <select name="gender">
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                            <option value="other">Other</option>
+                        </select>
+                </div>
+                <br>
+                <div>
+                    <label>Age</label>
+                    <input type="number" name="age" value="0">
+                </div>
+                <br>
+                <div>
+                    <label>Birthday</label>
+                    <input type="date" name="birthday">
+                </div>
+                <br>
+                <input type="submit" name="submit" value="Submit">
+            </form>
+                <br>
+                <hr>
+            <!--Button-->
+            <button>Click me</button>
+            <br>
+            <!--Quote-->
 
-        <blockquote cite="website.com">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto ex doloribus consectetur eligendi fugit, optio quis. Labore debitis facilis suscipit perspiciatis doloremque delectus. Veritatis tempore voluptas eius tenetur ullam laudantium!
-        </blockquote>
+            <blockquote cite="website.com">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto ex doloribus consectetur eligendi fugit, optio quis. Labore debitis facilis suscipit perspiciatis doloremque delectus. Veritatis tempore voluptas eius tenetur ullam laudantium!
+            </blockquote>
 
-        <br>
+            <br>
 
-        <p> The <abbr title="World wide Web">WWW</abbr> is neat</p>
+            <p> The <abbr title="World wide Web">WWW</abbr> is neat</p>
 
-        <p><cite>This is my test site</cite> </p>
-        <div style="margin-top:100px;"
+            <p><cite>This is my test site</cite> </p>
+    </div>
+    <footer id="main-footer">
+        <p>
+            Copyright &copy; 2020
+        </p>
+    </footer>
     </body>
 </html>
