--- a/csstest.html
+++ b/csstest.html
@@ -16,6 +16,7 @@
                 <li><a href="htmltest.html">Html test</a></li>
                 <li><a href="symantics.html">Symantics</a></li>
                 <li><a href="csstest.html">CSS Testing</a></li>
+                <li><a href="formtest.html">Form Testing</a></li>
             </ul>
         </div>
         <div class="box-1">
