--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </header>
     <body>
         <div class="container">
-            <h1>This is my WebdDev learning site.</h1>
+            <h1>This is my WebDev learning site.</h1>
             <div class="menu">
                 <h2>Menu</h2>
                 <ul>
@@ -15,6 +15,7 @@
                     <li><a href="htmltest.html">Html test</a></li>
                     <li><a href="symantics.html">Symantics</a></li>
                     <li><a href="csstest.html">CSS Testing</a></li>
+                    <li><a href="formtest.html">Form Testing</a></li>
                 </ul>
             </div>
             <p>
