--- a/htmltest.html
+++ b/htmltest.html
@@ -61,57 +61,11 @@
                     </tr>
                 </tbody>
             </table>
-            <!--Form-->
             <br>
-            <hr>
-            <br>
-            <form action="process.js" method="POST">
-                <div>
-                    <label>First Name</label>
-                    <input type="text" name="FirstName" placeholder="First Name"> 
-                </div>
-                <br>
-                <div>
-                    <label>Last Name</label>
-                    <input type="text" name="LastName" placeholder="Last Name"> 
-                </div>
-                <br>
-                <div>
-                    <label>Email</label>
-                    <input type="email" name="email" placeholder="Email">
-                </div>
-                <br>
-                <div>
-                    <label>Message</label>
-                    <textarea name="message">
-                    </textarea>
-                </div>
-                <br>
-                <div>
-                    <label>Gender</label>
-                        <select name="gender">
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="other">Other</option>
-                        </select>
-                </div>
-                <br>
-                <div>
-                    <label>Age</label>
-                    <input type="number" name="age" value="0">
-                </div>
-                <br>
-                <div>
-                    <label>Birthday</label>
-                    <input type="date" name="birthday">
-                </div>
-                <br>
-                <input type="submit" name="submit" value="Submit">
-            </form>
                 <br>
                 <hr>
             <!--Button-->
-            <button>Click me</button>
+            <button class="submit1">Click me</button>
             <br>
             <!--Quote-->
 
