floats and menu update

--- a/about.html
+++ b/about.html
@@ -9,22 +9,32 @@
     <body>
         <div class="container">
             <div class="menu">
-              <h2>Menu</h2>
-               <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="htmltest.html">Html test</a></li>
-                <li><a href="symantics.html">Symantics</a></li>
-                <li><a href="csstest.html">CSS Testing</a></li>
-                <li><a href="formtest.html">Form Testing</a></li>
-              </ul>
-             </div>
+                <h2>Menu</h2>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="htmltest.html">Html test</a></li>
+                    <li><a href="symantics.html">Symantics</a></li>
+                    <li><a href="csstest.html">CSS Testing</a></li>
+                    <li><a href="formtest.html">Form Testing</a></li>
+                </ul>
+                <div class="icons">
+                    <a href="https://github.com/ashathe"><img src="image/git.png"></a>
+                 </div>
+                 <div class="icons2">
+                    <a href="https://github.com/ashathe"><img src="image/git.png"></a>
+                 </div>
+            </div>
+             <div class="block">
              My name is Alexander Kersey, I am currently practicing Web Development. I will be using this website to practice and hone the skills I learn. Feel free to contact me at awkersey123@gmail.com
+            </div>
         </div>
-        <footer id="main-footer">
+        <div class="clr"></div>
+            <footer id="main-footer">
             <p>
                 Copyright &copy; 2020
             </p>
         </footer>
+
     </body>
 </html>
