--- a/csstest.html
+++ b/csstest.html
@@ -18,6 +18,12 @@
                 <li><a href="csstest.html">CSS Testing</a></li>
                 <li><a href="formtest.html">Form Testing</a></li>
             </ul>
+            <div class="icons">
+                <a href="https://github.com/ashathe"><img src="image/git.png"></a>
+             </div>
+             <div class="icons2">
+                <a href="https://github.com/ashathe"><img src="image/git.png"></a>
+             </div>
         </div>
         <div class="box-1">
             <h2 id="te">Test</h2>
@@ -31,6 +37,7 @@
             consectetur itaque natus aperiam pariatur, officia architecto sapiente, ad ut voluptatibus magnam doloribus reiciendis ab rem maxime libero? Doloribus, fugit impedit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae officia totam provident quos deserunt quam consectetur itaque natus aperiam pariatur, officia architecto sapiente, ad ut voluptatibus magnam doloribus reiciendis ab rem maxime libero? Doloribus, fugit impedit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae officia totam provident quos deserunt quam expedita voluptas nihil quod rem voluptate maxime exercitationem harum sit perferendis reprehenderit voluptatibus, vero cumque.</p>
         </div>
     </div>
+    <div class="clr"></div>
     <footer id="main-footer">
         <p>
             Copyright &copy; 2020
