--- a/htmltest.html
+++ b/htmltest.html
@@ -15,6 +15,12 @@
                     <li><a href="csstest.html">CSS Testing</a></li>
                     <li><a href="formtest.html">Form Testing</a></li>
                 </ul>
+                <div class="icons">
+                    <a href="https://github.com/ashathe"><img src="image/git.png"></a>
+                 </div>
+                 <div class="icons2">
+                    <a href="https://github.com/ashathe"><img src="image/git.png"></a>
+                 </div>
             </div>
             <!-- Hello -->
             <h1>Hello World - H1</h1>
