--- a/formtest.html
+++ b/formtest.html
@@ -18,6 +18,12 @@
                 <li><a href="csstest.html">CSS Testing</a></li>
                 <li><a href="formtest.html">Form Testing</a></li>
             </ul>
+            <div class="icons">
+                <a href="https://github.com/ashathe"><img src="image/git.png"></a>
+             </div>
+             <div class="icons2">
+                <a href="https://github.com/ashathe"><img src="image/git.png"></a>
+             </div>
         </div>
         <br>
         <form class="myform" action="process.js" method="POST">
@@ -62,6 +68,7 @@
             <br>
             <input class="submit1" type="submit" name="submit" value="Submit">
         </form>
+        <div class="clr"></div>
         <footer id="main-footer">
             <p>
                 Copyright &copy; 2020
