--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
-        <title> Home </title>
+        <title> Alexander K - Portfolio </title>
         <link rel="stylesheet" href="css/style.css">
     </header>
     <body>
