javascript test button

--- a/formtest.html
+++ b/formtest.html
@@ -69,6 +69,10 @@
             <input class="submit1" type="submit" name="submit" value="Submit">
         </form>
         <div class="clr"></div>
+        <button class="button" type="button"
+        onclick="document.getElementById('demo').innerHTML = Date()">
+        Javascript test</button>
+        <p id="demo"></p>
         <footer id="main-footer">
             <p>
                 Copyright &copy; 2020
