--- a/htmltest.html
+++ b/htmltest.html
@@ -22,6 +22,13 @@
                     <a href="https://github.com/ashathe"><img src="image/git.png"></a>
                  </div>
             </div>
+                <div id="sidebar">
+            <h3>BREAKING!</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate facilis facere atque quod tenetur provident asperiores laudantium eaque ipsam, 
+            </p>
+          </div>
+        <div class="block3">
             <!-- Hello -->
             <h1>Hello World - H1</h1>
             <h2>Heading 2</h2>
@@ -31,6 +38,7 @@
             <h6>Heading 6</h6>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Dolorem laboriosam asperiores nihil iste nemo reiciendis</strong>s, architecto impedit vero perspiciatis tempore recusandae<em> a error doloremque? </em>Eligendi nihil ducimus culpa facere officia?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem laboriosam asperiores nihil iste nemo reiciendis, architecto impedit vero perspiciatis tempore recusandae a error doloremque? Eligendi nihil ducimus culpa facere officia?</p>
+        </div>
             <br>
             <hr>
             <br>
@@ -84,6 +92,34 @@
             <p> The <abbr title="World wide Web">WWW</abbr> is neat</p>
 
             <p><cite>This is my test site</cite> </p>
+      <div class="block">
+        <h3>Header</h3>
+        <p>
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate facilis facere atque quod tenetur provident asperiores laudantium eaque ipsam, 
+      </p>
+      </div>      
+      <div class="block">
+        <h3>Header 2</h3>
+        <p>
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate facilis facere atque quod tenetur provident asperiores laudantium eaque ipsam, 
+      </p>
+      </div>      
+      <div class="block">
+        <h3>Header 3</h3>
+        <p>
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate facilis facere atque quod tenetur provident asperiores laudantium eaque ipsam, 
+      </p>
+      </div>
+
+    </div>
+    <div class="clr"></div>
+    <div id="main-block">
+        <h3>Header 3</h3>
+        <p>
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate facilis facere atque quod tenetur provident asperiores laudantium eaque ipsam,   Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate facilis facere atque quod tenetur provident asperiores laudantium eaque ipsam, 
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate facilis facere atque quod tenetur provident asperiores laudantium eaque ipsam,   Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cupiditate facilis facere atque quod tenetur provident asperiores laudantium eaque ipsam, 
+
+      </p>
     </div>
     <footer id="main-footer">
         <p>
